  and Nokogiri is recommended even by the author of Hpricot (_why). Now
  that Nokogiri works on JRuby, Webrat is going to use it as its sole
  XML backend.

CHANGED: Due to a reorganization, if you're currently requiring "webrat/rspec-rails",
  please change your code to require "webrat/integrations/rspec-rails"

* Minor enhancements

  * Update the Merb support to be based directly on Rack (Simon Rozet)
  * Support multiple select fields (Kieran P)
  * When locating select options, always match against text, not HTML

* Bug fixes

  * Fix logger issue when running inside Cucumber (Damian Janowski)
  * Fix various issues related to submitting values with HTML entities (Kieran P)
  * Call #to_i on the :count option in matchers (Michael Christenson II)
  * Fix bug where multiline param values were getting truncated

== 0.5.3 / 2009-08-27

* Minor enhancements

  * Remove unnecessary requires which are to the wrong paths on Edge Rails

== 0.5.1 / 2009-08-18

* Minor enhancements

  * Base Webrat::MIME on Rack::Mime (Simon Rozet)
  * Support file uploads in Rack mode (Simon Rozet)

* Bug fixes

  * Fix bug in Webrat::Methods preventing Selenium mode from working [#277]

== 0.5.0 / 2009-08-12

* Major enhancements

  * Depreacate :rack_test and :sinatra in favor of :rack, which uses Rack::Test (Simon Rozet)

* Minor enhancements

  * Don't require rubygems at runtime (Simon Rozet)

== 0.4.5 / 2009-08-10

* Major enhancements

  * Ruby 1.9 compatibility (Michael Fellinger, Jakub Kuźma)
  * Improve performance (~2x) on JRuby by supporting Nokogiri
  * Added support for external app servers in selenium mode (basically don't start one) (Mike Gaffney)
  * Added support for uploading files for Merb (Ryan Carver)

* Minor enhancements

  * Upgrade to selenium-client to 1.2.16 (Brian Landau)
  * Upgrade selenium-server.jar to 1.0.1 (Brian Landau)
  * Make redirect detection work in the face of rational maths (like when ruby-units is active) (Piers Cawley)